<!-- res/layout/activity_login.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:fitsSystemWindows="true"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_have_an_account_register_here"
        android:textColor="@color/main_palette_old_lavender_variant"
        android:textSize="14sp"
        android:layout_marginBottom="8dp" />

    <TextView
    android:id="@+id/forgot_password_link"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/forgot_password"
    android:textColor="@color/main_palette_old_lavender_variant"
    android:textSize="14sp" />

    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_email"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/google_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        android:layout_marginTop="16dp" />
</LinearLayout>
